--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bulma-components": "^4.1.0",
+    "react-burger-menu": "file:./react-burger-menu-3.0.6.tgz",
     "react-dom": "^18.1.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
